--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark mr-auto fixed-top">
-        <a class="navbar-brand" href="/"><img src="https://i.ibb.co/YQ37gst/CE-logo-3-4.png" alt="" style="display: inline; margin-top: 7px; margin-bottom: 7px;"> Crescent Export</a>
+        <a class="navbar-brand" href="/"><img src="https://i.ibb.co/YQ37gst/CE-logo-3-4.png" alt="" style="margin-top: 7px; margin-bottom: 7px;"> Crescent Export</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
